fix bugs in paths